--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/prismic": "^1.3.1",
+    "gsap": "^3.8.0",
     "nuxt": "^2.15.7",
     "prismic-dom": "^2.2.6"
   },
