--- a/package.json
+++ b/package.json
@@ -9,13 +9,16 @@
     "generate": "nuxt generate",
     "lint:js": "eslint --ext \".js,.vue\" --ignore-path .gitignore .",
     "lint:style": "stylelint \"**/*.{vue,css}\" --ignore-path .gitignore",
-    "lint": "npm run lint:js && npm run lint:style"
+    "lint": "npm run lint:js && npm run lint:style",
+    "pushdir": "push-dir --dir=dist --branch=gh-pages --cleanup",
+    "deploy": "cross-env DEPLOY_ENV=GH_PAGES npm run generate && npm run pushdir"
   },
   "dependencies": {
     "@nuxtjs/prismic": "^1.3.1",
     "gsap": "^3.8.0",
     "nuxt": "^2.15.7",
-    "prismic-dom": "^2.2.6"
+    "prismic-dom": "^2.2.6",
+    "push-dir": "^0.4.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -23,6 +26,7 @@
     "@nuxtjs/eslint-module": "^3.0.2",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "core-js": "^3.15.1",
+    "cross-env": "^7.0.3",
     "eslint": "^7.29.0",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-nuxt": "^2.0.0",
