--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@babel/eslint-parser": "^7.14.7",
     "@nuxtjs/eslint-config": "^6.0.1",
     "@nuxtjs/eslint-module": "^3.0.2",
+    "@nuxtjs/google-analytics": "^2.4.0",
     "@nuxtjs/stylelint-module": "^4.0.0",
     "core-js": "^3.15.1",
     "cross-env": "^7.0.3",
